--- a/ressources.qrc
+++ b/ressources.qrc
@@ -18,7 +18,9 @@
         <file>images/avatar rose.gif</file>
         <file>images/646-walking-walkcycle-person-outline.gif</file>
         <file>images/walking man transparent.gif</file>
-        <file>images/add don.gif</file>
-        <file>images/12-layers-flat.gif</file>
+        <file>images/20-love-heart-flat.gif</file>
+        <file>images/rendez_vous.gif</file>
+        <file>images/qrcode.gif</file>
+        <file>images/qrcode300px.gif</file>
     </qresource>
 </RCC>
